
// protoc -I greet/proto --go_out=. --go_opt=module=udemy-projects.com/grpc --go-grpc_out=. --go-grpc_opt=module=udemy-projects.com/grpc greet/proto/dummy.proto

syntax = "proto3";
package greet;
option go_package = "udemy-projects.com/grpc/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string Result = 1;
}



service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse);
}